Bug 769363 - IonMonkey: LBoundsCheck should not require a register for the length operand. r=jandem