js/src/ion/arm/Assembler-arm.h
@@ -995,6 +995,11 @@ class Operand
         return O2Reg(Register::FromCode(reg));
     }
 
+    Register toReg() const {
+        JS_ASSERT(Tag == OP2);
+        return Register::FromCode(reg);
+    }
+
     void toAddr(Register *r, Imm32 *dest) const {
         JS_ASSERT(Tag == MEM);
         *r = Register::FromCode(reg);
